# scoring_apis

./: .dockerignore  .gitignore  Dockerfile  README.md  config_factory.py  database.py  docker-compose.yml  fastapi_app.py  logging_wrapper.py  pyproject.toml  request_models.py  request_processor.py  response_models.py  run_apps.py  sql_object.py
.github/workflows/: deploy_dev.yml
routers/: data_layers.py
routers/Income/: endpoints.py  logic.py
routers/competition/: endpoints.py  logic.py
routers/complimentary/: endpoints.py  logic.py
routers/demographics/: endpoints.py  ep.py  logic.py
routers/traffic/: endpoints.py  logic.py  traffic_api.py
scoring_algorithms/: .gitignore  __init__.py  competition.py  complementary.py  demographics.py  income.py  pyproject.toml  setup.py  traffic.py
